<resources>
    <string name="app_name" translatable="false">BaseAppJava2</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this BaseProduct, would \nyou mind rating us on the Google Play, then?</string>

    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="report_bugs_and_tell_us_what_to_improve">Report bugs and tell us what to improve</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="request">Request or feedback</string>
    <string name="send_email">Send by email&#8230;</string>
    <string name="email_clients_not_found">Not found any Email client</string>
    <string name="version">Version</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="u_privacy_policy"><u>Privacy Policy</u></string>
    <string name="background">Background</string>
    <string name="zipper_style">Zipper Style</string>
    <string name="row_style">Row Style</string>
    <string name="sound_style">Sound Style</string>
    <string name="personalized">Personalized</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="set_zipper_sound">Set zipper sound</string>
    <string name="zipper_sound">Zipper Sound</string>
    <string name="set_sound_when_open">Set sound when open</string>
    <string name="open_sound">Open Sound</string>
    <string name="zipper_1">Zipper 1</string>
    <string name="zipper_2">Zipper 2</string>
    <string name="zipper_3">Zipper 3</string>
    <string name="zipper_4">Zipper 4</string>
    <string name="zipper_5">Zipper 5</string>
    <string name="zipper_6">Zipper 6</string>
    <string name="zipper_7">Zipper 7</string>
    <string name="zipper_8">Zipper 8</string>
    <string name="cat">Cat</string>
    <string name="gun">Gun</string>
    <string name="laughing">Laughing</string>
    <string name="duck">Duck</string>
    <string name="explosion">Explosion</string>
    <string name="welcome">Welcome</string>
    <string name="broken">Broken</string>
    <string name="bell">Bell</string>

    <string name="title_dialog_per">Grant these permissions to use <b>\"Zipper lock"</b></string>
    <string name="content_dialog_per_1">Note: You can also grant permission in <b>Settings -> Apps -> Zipper lock -> Storage </b></string>
    <string name="content_dialog_per_2">Note: You can also grant permission in <b>Settings -> Apps -> Zipper lock -> Notification </b></string>
    <string name="content_dialog_per_3">Note: You can also grant permission in <b>Settings -> Apps -> Zipper lock -> Overlay </b></string>
    <string name="content_dialog_per_4">Note: You can also grant permission in <b>Settings -> Apps -> Zipper lock -> Photos and videos </b></string>
    <string name="apply">Apply</string>
    <string name="you_may_also_custom_other_style">You may also custom other style:</string>
    <string name="languages">Languages</string>
    <string name="zipper_lock_screen">Zipper Lock Screen</string>
    <string name="enable_lock_screen">Enable lock screen</string>
    <string name="preview">Preview</string>
    <string name="permission">Permission</string>
    <string name="this_app_requires_the_following_permissions_to_provide_services_for_you">This app requires the following permissions to provide services for you:</string>
    <string name="overlay_access">Overlay access</string>
    <string name="notification_access">Notification access</string>
    <string name="media_access">Media access</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="select">Select</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="settings">Settings</string>
    <string name="wallpaper_has_been_set_successfully">Wallpaper has been set successfully.</string>
    <string name="back_to_home">Back to home</string>
    <string name="active_permission">Active Permission</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="permission_is_required_to_proceed_to_the_next_step">Permission is required to proceed to the next step</string>
    <string name="various_zipper_styles">Various Zipper Styles</string>
    <string name="realistic_zipper_opening_sound">Realistic Zipper Opening sound</string>
    <string name="please_allow_permission_display_pop_up_windows_while_running_in_the_background_and_show_on_lock_screen">Please allow permission \'Display pop up windows while running in the background\' and \'Show on Lock screen\'</string>
    <string name="setting">Setting</string>
    <string name="image">Image</string>
    <string name="loading_failed">Loading failed</string>
    <string name="sound_not_found">Sound not found</string>
    <string name="color_not_found">Color not found</string>
    <string name="image_not_found">Image not found</string>
    <string name="name_not_found">Name not found</string>
    <string name="type_not_found">Type not found</string>
    <string name="failed_to_set_wallpaper">Failed to set wallpaper</string>
    <string name="lock_screen_wallpaper_not_supported_on_your_device">Lock screen wallpaper not supported on your device</string>
    <string name="failed_to_set_lock_screen_wallpaper">Failed to set lock screen wallpaper</string>
    <string name="failed_to_set_home_screen_wallpaper">Failed to set home screen wallpaper</string>
    <string name="wallpaper_not_found">Wallpaper not found</string>
    <string name="please_choose_your_language">Please choose your language</string>
    <string name="discard_changes">Discard Changes?</string>
    <string name="you_have_unsaved_changes_are_you_sure_you_want_to_discard_all">You have unsaved changes. Are you sure you want to discard all?</string>
    <string name="discard">Discard</string>
    <string name="quit_app">Quit App?</string>
    <string name="loading">Loading...</string>
    <string name="stay">Stay</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_screen_and_lock_screen">Home Screen and Lock Screen</string>
</resources>