<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_29sdp"
        android:background="@drawable/bg_item_home_2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_12sdp"
            android:ellipsize="end"
            android:fontFamily="@font/suez_one_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/discard_changes"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_regular_400"
            android:includeFontPadding="false"
            android:gravity="center_horizontal"
            android:text="@string/you_have_unsaved_changes_are_you_sure_you_want_to_discard_all"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_cancel"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold_700"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingVertical="11dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_discard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_discard"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold_700"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingVertical="11dp"
                android:text="@string/discard"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>