<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_29sdp"
        android:background="@drawable/bg_item_home_2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:fontFamily="@font/suez_one_regular"
            android:text="@string/permission"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:includeFontPadding="false"
            android:text="@string/title_dialog_per"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular_400"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:includeFontPadding="false"
            android:text="@string/content_dialog_per_3"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular_400"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvStay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_9sdp"
                android:text="@string/stay"
                android:background="@drawable/bg_btn_cancel_per"
                android:fontFamily="@font/roboto_medium_500"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvAgree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_9sdp"
                android:text="Agree"
                android:background="@drawable/bg_btn_agree_per"
                android:fontFamily="@font/roboto_medium_500"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>