<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/img_bg"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:focusable="false"
        android:padding="12dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/suez_one_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/permission"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintEnd_toStartOf="@id/gone"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <ImageView
        android:id="@+id/gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        app:layout_constraintBottom_toTopOf="@id/tv_continue"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/img_permission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="48dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular_400"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lines="2"
                android:maxLines="2"
                android:textColor="@color/white"
                android:text="@string/this_app_requires_the_following_permissions_to_provide_services_for_you"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:padding="16dp"
                android:background="@drawable/bg_btn_permission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium_500"
                    android:textStyle="bold"
                    android:includeFontPadding="false"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/overlay_access"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/iv_sw_overlay"
                    app:layout_constraintEnd_toStartOf="@id/iv_sw_overlay"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/iv_sw_overlay" />

                <ImageView
                    android:id="@+id/iv_sw_overlay"
                    android:layout_width="52dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_sw_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/noti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:background="@drawable/bg_btn_permission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overlay">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium_500"
                    android:textStyle="bold"
                    android:includeFontPadding="false"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/notification_access"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/iv_sw_noti"
                    app:layout_constraintEnd_toStartOf="@id/iv_sw_noti"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/iv_sw_noti" />

                <ImageView
                    android:id="@+id/iv_sw_noti"
                    android:layout_width="52dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_sw_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:background="@drawable/bg_btn_permission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noti">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium_500"
                    android:textStyle="bold"
                    android:includeFontPadding="false"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/media_access"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/iv_sw_media"
                    app:layout_constraintEnd_toStartOf="@id/iv_sw_media"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/iv_sw_media" />

                <ImageView
                    android:id="@+id/iv_sw_media"
                    android:layout_width="52dp"
                    android:layout_height="32dp"
                    android:src="@drawable/img_sw_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:fontFamily="@font/roboto_medium_500"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/agree_and_continue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="158dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <RelativeLayout-->
    <!--        android:id="@+id/nativePermission"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent">-->

    <!--        <FrameLayout-->
    <!--            android:id="@+id/fr_ads_main"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content">-->
    <!--            <include layout="@layout/layout_native_load_large_below" />-->
    <!--        </FrameLayout>-->
    <!--    </RelativeLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>